@@ -14,6 +14,9 @@ Release 2.5.0 - UNRELEASED
 
   BUG FIXES 
 
+    YARN-1718. Fix a couple isTerminals in Fair Scheduler queue placement rules
+    (Sandy Ryza)
+
 Release 2.4.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
